added working asset template

--- a/Ironsworn_v2/precompiled/src/Ironsworn.styl
+++ b/Ironsworn_v2/precompiled/src/Ironsworn.styl
@@ -147,30 +147,31 @@ hr.sheet-nav-bottom
   margin-bottom: 0.5em
   height: 2px
 
-.input[type=radio].sheet-ironsworn-index:checked ~ div.sheet-ironsworn-index,
-.input[type=radio].sheet-ironsworn-index:checked ~ div.sheet-ironsworn-index
+div.sheet-ironsworn-modes,
+div.sheet-delve-modes
+  display none
+
+input[type=radio].sheet-ironsworn-modes:checked ~ div.sheet-ironsworn-modes,
+input[type=radio].sheet-delve-modes:checked ~ div.sheet-delve-modes
   display block
 
-.sheet-page1tab,
-.sheet-page2tab,
-.sheet-page3tab,
-.sheet-page4tab,
-.sheet-page5tab,
-.sheet-page6tab,
-.sheet-page7tab,
-.sheet-page8tab,
-.sheet-page9tab
-  display: none
+input[type=radio].sheet-ironsworn-assets:checked ~ div.sheet-ironsworn-assets,
+input[type=radio].sheet-ironsworn-bonds:checked ~ div.sheet-ironsworn-bonds,
+input[type=radio].sheet-ironsworn-moves:checked ~ div.sheet-ironsworn-moves,
+input[type=radio].sheet-ironsworn-oracles:checked ~ div.sheet-ironsworn-oracles,
+input[type=radio].sheet-ironsworn-progress:checked ~ div.sheet-ironsworn-progress,
+input[type=radio].sheet-ironsworn-summary:checked ~ div.sheet-ironsworn-summary,
+input[type=radio].sheet-ironsworn-vows:checked ~ div.sheet-ironsworn-vows
+  display: block
 
-input[type=radio].sheet-page1:checked ~ div.sheet-page1tab,
-input[type=radio].sheet-page2:checked ~ div.sheet-page2tab,
-input[type=radio].sheet-page3:checked ~ div.sheet-page3tab,
-input[type=radio].sheet-page4:checked ~ div.sheet-page4tab,
-input[type=radio].sheet-page5:checked ~ div.sheet-page5tab,
-input[type=radio].sheet-page6:checked ~ div.sheet-page6tab,
-input[type=radio].sheet-page7:checked ~ div.sheet-page7tab,
-input[type=radio].sheet-page8:checked ~ div.sheet-page8tab,
-input[type=radio].sheet-page9:checked ~ div.sheet-page9tab
+input[type=radio].sheet-delve-summary:checked ~ div.sheet-delve-summary,
+input[type=radio].sheet-delve-assets:checked ~ div.sheet-delve-assets,
+input[type=radio].sheet-delve-bonds:checked ~ div.sheet-delve-bonds,
+input[type=radio].sheet-delve-moves:checked ~ div.sheet-delve-moves,
+input[type=radio].sheet-delve-oracles:checked ~ div.sheet-delve-oracles,
+input[type=radio].sheet-delve-progress:checked ~ div.sheet-delve-progress,
+input[type=radio].sheet-delve-sites:checked ~ div.sheet-delve-sites,
+input[type=radio].sheet-delve-vows:checked ~ div.sheet-delve-vows
   display: block
 
 input.sheet-pages + .sheet-page-label,
@@ -662,7 +663,7 @@ span.sheet-showhide:hover
   color: #4C4D4F
 
 div.sheet-showhide,
-.sheet-hidden-flex
+.sheet-hide
   display: none
 
 /* ORACLES */
