--- a/Ironsworn_v2/precompiled/src/components/character-details/details.pug
+++ b/Ironsworn_v2/precompiled/src/components/character-details/details.pug
@@ -4,8 +4,8 @@ div.sheet-character-details-bar
     h2 Experience
       input(type='text' class='sheet-xp' name='attr_xp' placeholder='0')
       input(type='text' class='sheet-xp' name='attr_spent_xp' placeholder='0')
-        //- TODO: Increase button 
-        //- TODO: Decrease button 
+      //- TODO: Increase button 
+      //- TODO: Decrease button 
   
     div.sheet-character-name
       input(type='text' class='sheet-pc-name' name='attr_character_name' placeholder='Character Name')
@@ -20,13 +20,13 @@ div.sheet-character-details-bar
       div
         h2 Spirit
         img
-        select(name='attr_health')
+        select(name='attr_spirit')
           each val, index in trackValues
             option(value=index)=val
 
       div
         h2 Supply
         img
-        select(name='attr_health')
+        select(name='attr_supply')
           each val, index in trackValues
             option(value=index)=val
