--- a/Ironsworn_v2/precompiled/src/components/nav/delve-bar.pug
+++ b/Ironsworn_v2/precompiled/src/components/nav/delve-bar.pug
@@ -1,4 +1,4 @@
-- var navOptions = { 'vows-delve-mode-page':'Vows', 'moves-delve-mode-page':'Moves', 'sites-delve-mode-page':'Sites', 'assets-delve-mode-page':'Assets', 'oracles-delve-mode-page':'Oracles', 'progress-delve-mode-page':'Progress', 'bonds-delve-mode-page':'Bonds' }
+- var navOptions = { 'summary-delve-mode':'Summary', 'vows-delve-mode':'Vows', 'moves-delve-mode':'Moves', 'sites-delve-mode':'Sites', 'assets-delve-mode':'Assets', 'oracles-delve-mode':'Oracles', 'progress-delve-mode':'Progress', 'bonds-delve-mode':'Bonds' }
 
 div.sheet-delve-nav-bar-pages
   each text, id in navOptions 
