--- a/Ironsworn_v2/precompiled/src/components/nav/delve-modes.pug
+++ b/Ironsworn_v2/precompiled/src/components/nav/delve-modes.pug
@@ -1,4 +1,4 @@
-- var navOptions = { 'ironsworn-mode-index':'ironsworn' }
+- var navOptions = { 'ironsworn-mode':'ironsworn' }
 
 div.sheet-delve-nav-bar-modes
   each text, id in navOptions 
