--- a/Ironsworn_v2/precompiled/src/components/sites/sites.pug
+++ b/Ironsworn_v2/precompiled/src/components/sites/sites.pug
@@ -20,7 +20,7 @@
             </div>
             <input type="checkbox" class="sheet-show-site-info" name="attr_site-show">
             <span class="sheet-show-site-info">Details</span>
-            <div class="sheet-show-site-info sheet-hidden-flex">
+            <div class="sheet-show-site-info sheet-hide">
                 <div class="sheet-full-width">
                     <h3 class="sheet-site-divide">&emsp;PROGRESS&emsp;</h3>
                     <div class="sheet-site-progress-header">
