--- a/Ironsworn_v2/precompiled/src/modes/ironsworn.pug
+++ b/Ironsworn_v2/precompiled/src/modes/ironsworn.pug
@@ -1,5 +1,5 @@
-input(type="radio" name="attr_mode" class="sheet-hidden-flex sheet-ironsworn-index")
-div.sheet-ironsworn-index.sheet-hidden-flex
+input(type="radio" name="attr_mode" class="sheet-hide sheet-ironsworn-modes" id="ironsworn-mode" value="1" checked)
+div.sheet-ironsworn-modes
   //- Header
   div.sheet-ironsworn-mode
     include ../components/character-details/details.pug
@@ -9,28 +9,35 @@ div.sheet-ironsworn-index.sheet-hidden-flex
     include ../components/nav/ironsworn-bar.pug
 
   //- Pages
-  //- Assets
-  div.sheet-ironsworn-mode
-    include ../pages/assets.pug
-  //- Bonds
-  div.sheet-ironsworn-mode
-    include ../components/bonds/bonds.pug
-  //- Moves
-  div.sheet-ironsworn-mode
-    include ../components/moves/moves.pug
-  //- Oracles
-  div.sheet-ironsworn-mode
-    include ../components/oracles/ironsworn-oracles.pug
-    //- Progress
-  div.sheet-ironsworn-mode
-    include ../components/progress/progress.pug
   //- Summary 
-  div.sheet-ironsworn-mode
+  input(type="radio" name="attr_ironsworn-page" id="summary-ironsworn-mode" class="sheet-hide sheet-ironsworn-summary" value="1" checked)
+  div.sheet-ironsworn-mode.sheet-ironsworn-summary.sheet-hide
     include ../components/character-details/stats.pug
     include ../components/assets/preview.pug
     include ../components/character-details/debilities.pug
+  //- Assets
+  input(type="radio" name="attr_ironsworn-page" id="assets-ironsworn-mode" class="sheet-hide sheet-ironsworn-assets" value="2")
+  div.sheet-ironsworn-mode.sheet-ironsworn-assets.sheet-hide
+    include ../pages/assets.pug
+  //- Bonds
+  input(type="radio" name="attr_ironsworn-page" id="bonds-ironsworn-mode" class="sheet-hide sheet-ironsworn-bonds" value="3")
+  div.sheet-ironsworn-mode.sheet-ironsworn-bonds.sheet-hide
+    include ../pages/bonds.pug
+  //- Moves
+  input(type="radio" name="attr_ironsworn-page" id="moves-ironsworn-mode" class="sheet-hide sheet-ironsworn-moves" value="4")
+  div.sheet-ironsworn-mode.sheet-ironsworn-moves.sheet-hide
+    include ../components/moves/moves.pug
+  //- Oracles
+  input(type="radio" name="attr_ironsworn-page" id="oracles-ironsworn-mode" class="sheet-hide sheet-ironsworn-oracles" value="5")
+  div.sheet-ironsworn-mode.sheet-ironsworn-oracles.sheet-hide
+    include ../components/oracles/ironsworn-oracles.pug
+  //- Progress
+  input(type="radio" name="attr_ironsworn-page" id="progress-ironsworn-mode" class="sheet-hide sheet-ironsworn-progress" value="6")
+  div.sheet-ironsworn-mode.sheet-ironsworn-progress.sheet-hide
+    include ../components/progress/progress.pug
   //-  Vows
-  div.sheet-ironsworn-mode
+  input(type="radio" name="attr_ironsworn-page" id="vows-ironsworn-mode" class="sheet-hide sheet-ironsworn-vows" value="7")
+  div.sheet-ironsworn-mode.sheet-ironsworn-vows.sheet-hide
     include ../components/vows/vows.pug
 
   //- Right Bar
