--- a/Ironsworn_v2/precompiled/src/components/nav/ironsworn-bar.pug
+++ b/Ironsworn_v2/precompiled/src/components/nav/ironsworn-bar.pug
@@ -1,4 +1,4 @@
-- var navOptions = { 'vows-ironsworn-mode-page':'Vows', 'moves-ironsworn-mode-page':'Moves', 'assets-ironsworn-mode-page':'Assets', 'oracles-ironsworn-mode-page':'Oracles', 'progress-ironsworn-mode-page':'Progress', 'bonds-ironsworn-mode-page':'Bonds' }
+- var navOptions = { 'summary-ironsworn-mode':'Summary', 'vows-ironsworn-mode':'Vows', 'moves-ironsworn-mode':'Moves', 'assets-ironsworn-mode':'Assets', 'oracles-ironsworn-mode':'Oracles', 'progress-ironsworn-mode':'Progress', 'bonds-ironsworn-mode':'Bonds' }
 
 div.sheet-ironsworn-nav-bar-pages
   each text, id in navOptions 
