--- a/Ironsworn_v2/precompiled/src/components/nav/ironsworn-modes.pug
+++ b/Ironsworn_v2/precompiled/src/components/nav/ironsworn-modes.pug
@@ -1,4 +1,4 @@
-- var navOptions = { 'delve-mode-index':'delve' }
+- var navOptions = { 'delve-mode':'delve' }
 
 div.sheet-ironsworn-nav-bar-modes
   each text, id in navOptions 
