--- a/Ironsworn_v2/precompiled/src/components/vows/vows.pug
+++ b/Ironsworn_v2/precompiled/src/components/vows/vows.pug
@@ -8,7 +8,7 @@ mixin progressBox
   option(value="3") *
   option(value="4") #
 
-input(type="checkbox" class="sheet-hidden-flex sheet-vows-ironsworn-mode-page" name="attr_vows_ironsworn_mode_page" id="vows-ironsworn-mode-page")
+input(type="checkbox" class="sheet-hide sheet-vows-ironsworn-mode-page" name="attr_vows_ironsworn_mode_page" id="vows-ironsworn-mode-page")
 div.sheet-vows-ironsworn-mode-page
   div.sheet-vows
     fieldset.repeating_vow
