--- a/Ironsworn_v2/precompiled/src/modes/delve.pug
+++ b/Ironsworn_v2/precompiled/src/modes/delve.pug
@@ -1,5 +1,5 @@
-input(type="radio" name="attr_mode" class="sheet-hidden-flex sheet-delve-index")
-div.sheet-delve-index.sheet-hidden-flex
+input(type="radio" name="attr_mode" class="sheet-hide sheet-delve-modes" id="delve-mode"  value="2")
+div.sheet-delve-modes
   //- Header
   div.sheet-delve-mode
     include ../components/character-details/details.pug
@@ -9,28 +9,39 @@ div.sheet-delve-index.sheet-hidden-flex
     include ../components/nav/delve-modes.pug
 
   //- Pages
-  //- Assets
-  div.sheet-delve-mode
-    include ../pages/assets.pug
-  //- Bonds
-  div.sheet-delve-mode
-    include ../components/bonds/bonds.pug
-  //- Moves
-  div.sheet-delve-mode
-    include ../components/moves/moves.pug
-  //- Oracles
-  div.sheet-delve-mode
-    include ../components/oracles/delve-oracles.pug
-    //- Progress
-  div.sheet-delve-mode
-    include ../components/progress/progress.pug
   //- Summary 
-  div.sheet-delve-mode
+  input(type="radio" name="attr_delve-page" id="summary-delve-mode" class="sheet-hide sheet-delve-summary" value="1" checked)
+  div.sheet-delve-mode.sheet-delve-summary.sheet-hide
     include ../components/character-details/stats.pug
     include ../components/assets/preview.pug
     include ../components/character-details/debilities.pug
+  //- Assets
+  input(type="radio" name="attr_delve-page" id="assets-delve-mode" class="sheet-hide sheet-delve-assets" value="2")
+  div.sheet-delve-mode.sheet-delve-assets.sheet-hide
+    include ../pages/assets.pug
+  //- Bonds
+  input(type="radio" name="attr_delve-page" id="bonds-delve-mode" class="sheet-hide sheet-delve-bonds" value="3")
+  div.sheet-delve-mode.sheet-delve-bonds.sheet-hide
+    include ../pages/bonds.pug
+  //- Moves
+  input(type="radio" name="attr_delve-page" id="moves-delve-mode" class="sheet-hide sheet-delve-moves" value="4")
+  div.sheet-delve-mode.sheet-delve-moves.sheet-hide
+    include ../components/moves/moves.pug
+  //- Sites
+  input(type="radio" name="attr_delve-page" id="sites-delve-mode" class="sheet-hide sheet-delve-sites" value="5")
+  div.sheet-delve-mode.sheet-delve-sites.sheet-hide
+    include ../components/sites/sites.pug
+  //- Oracles
+  input(type="radio" name="attr_delve-page" id="oracles-delve-mode" class="sheet-hide sheet-delve-oracles" value="6")
+  div.sheet-delve-mode.sheet-delve-oracles.sheet-hide
+    include ../components/oracles/delve-oracles.pug
+  //- Progress
+  input(type="radio" name="attr_delve-page" id="progress-delve-mode" class="sheet-hide sheet-delve-progress" value="7")
+  div.sheet-delve-mode.sheet-delve-progress.sheet-hide
+    include ../components/progress/progress.pug
   //-  Vows
-  div.sheet-delve-mode
+  input(type="radio" name="attr_delve-page" id="vows-delve-mode" class="sheet-hide sheet-delve-vows" value="8")
+  div.sheet-delve-mode.sheet-delve-vows.sheet-hide
     include ../components/vows/vows.pug
 
   //- Right Bar
