added vows page

--- a/Ironcrunch/src/src/pages/main.pug
+++ b/Ironcrunch/src/src/pages/main.pug
@@ -1,14 +1,21 @@
 //- Header
 include ../components/character-details/details.pug
 
+//- Nav Bar
+include ../components/nav/nav-bar.pug
+
 //- Pages
-div.sheet-ironcrunch-summary
+//- Summary 
+input(type="radio" name="attr_ironcrunch-page" id="summary-ironcrunch-mode" class="sheet-hide sheet-ironcrunch-summary" value="1" checked)
+div.sheet-ironcrunch-summary.sheet-hide
   include ../components/character-details/stats.pug
 //- Bonds
-div.sheet-ironcrunch-bonds
+input(type="radio" name="attr_ironcrunch-page" id="bonds-ironcrunch-mode" class="sheet-hide sheet-ironcrunch-bonds" value="2")
+div.sheet-ironcrunch-bonds.sheet-hide
   include ./bonds.pug
 //-  Vows
-div.sheet-ironcrunch-vows
+input(type="radio" name="attr_ironcrunch-page" id="vows-ironcrunch-mode" class="sheet-hide sheet-ironcrunch-vows" value="3")
+div.sheet-ironcrunch-vows.sheet-hide
   include ../components/vows/vows.pug
 
 //- Footer
