added new bonds page

--- a/Ironcrunch/src/src/pages/main.pug
+++ b/Ironcrunch/src/src/pages/main.pug
@@ -6,18 +6,17 @@ include ../components/nav/nav-bar.pug
 
 //- Pages
 //- Summary 
-input(type="radio" name="attr_ironcrunch-page" id="summary-ironcrunch-mode" class="sheet-hide sheet-ironcrunch-summary" value="1" checked)
+input(type="radio" name="attr_ironcrunch-page" id="summary" class="sheet-hide sheet-ironcrunch-summary" value="1" checked)
 div.sheet-ironcrunch-summary.sheet-hide
   include ../components/character-details/stats.pug
 //- Bonds
-input(type="radio" name="attr_ironcrunch-page" id="bonds-ironcrunch-mode" class="sheet-hide sheet-ironcrunch-bonds" value="2")
+input(type="radio" name="attr_ironcrunch-page" id="bonds" class="sheet-hide sheet-ironcrunch-bonds" value="2")
 div.sheet-ironcrunch-bonds.sheet-hide
   include ./bonds.pug
 //-  Vows
-input(type="radio" name="attr_ironcrunch-page" id="vows-ironcrunch-mode" class="sheet-hide sheet-ironcrunch-vows" value="3")
+input(type="radio" name="attr_ironcrunch-page" id="vows" class="sheet-hide sheet-ironcrunch-vows" value="3")
 div.sheet-ironcrunch-vows.sheet-hide
   include ../components/vows/vows.pug
 
 //- Footer
-div.sheet-ironcrunch-mode 
-  include ../components/character-details/momentum.pug
+include ../components/character-details/momentum.pug
