added momentum changes

--- a/Ironcrunch/src/html/components/character-details/details.html
+++ b/Ironcrunch/src/html/components/character-details/details.html
@@ -11,35 +11,90 @@
     <div class="sheet-resources">
       <div>
         <h2>Health</h2><img/>
-        <select name="attr_health">
+        <select name="attr_health_ten">
+          <option value="40">40</option>
+          <option value="30">30</option>
+          <option value="20">20</option>
+          <option value="10">10</option>
           <option value="0">0</option>
-          <option value="1">+1</option>
-          <option value="2">+2</option>
-          <option value="3">+4</option>
-          <option value="4">+4</option>
-          <option value="5">+5</option>
+        </select>
+        <select name="attr_health_one">
+          <option value="9">9</option>
+          <option value="8">8</option>
+          <option value="7">7</option>
+          <option value="6">6</option>
+          <option value="5">5</option>
+          <option value="4">4</option>
+          <option value="3">3</option>
+          <option value="2">2</option>
+          <option value="1">1</option>
+          <option value="0">0</option>
         </select>
       </div>
       <div>
         <h2>Spirit</h2><img/>
         <select name="attr_spirit">
-          <option value="0">0</option>
-          <option value="1">+1</option>
-          <option value="2">+2</option>
-          <option value="3">+4</option>
-          <option value="4">+4</option>
+          <option value="10">+10</option>
+          <option value="9">+9</option>
+          <option value="8">+8</option>
+          <option value="7">+7</option>
+          <option value="6">+6</option>
           <option value="5">+5</option>
+          <option value="4">+4</option>
+          <option value="3">+3</option>
+          <option value="2">+2</option>
+          <option value="1">+1</option>
+          <option value="0">+0</option>
         </select>
       </div>
       <div>
         <h2>Supply</h2><img/>
         <select name="attr_supply">
-          <option value="0">0</option>
-          <option value="1">+1</option>
-          <option value="2">+2</option>
-          <option value="3">+4</option>
-          <option value="4">+4</option>
+          <option value="10">+10</option>
+          <option value="9">+9</option>
+          <option value="8">+8</option>
+          <option value="7">+7</option>
+          <option value="6">+6</option>
           <option value="5">+5</option>
+          <option value="4">+4</option>
+          <option value="3">+3</option>
+          <option value="2">+2</option>
+          <option value="1">+1</option>
+          <option value="0">+0</option>
+        </select>
+      </div>
+      <div>
+        <h2>Wealth</h2><img/>
+        <select name="attr_wealth">
+          <option value="10">+10</option>
+          <option value="9">+9</option>
+          <option value="8">+8</option>
+          <option value="7">+7</option>
+          <option value="6">+6</option>
+          <option value="5">+5</option>
+          <option value="4">+4</option>
+          <option value="3">+3</option>
+          <option value="2">+2</option>
+          <option value="1">+1</option>
+          <option value="0">+0</option>
+        </select>
+      </div>
+      <div>
+        <h2>Load</h2><img/>
+        <select name="attr_load">
+          <option value="12">12</option>
+          <option value="11">11</option>
+          <option value="10">10</option>
+          <option value="9">9</option>
+          <option value="8">8</option>
+          <option value="7">7</option>
+          <option value="6">6</option>
+          <option value="5">5</option>
+          <option value="4">4</option>
+          <option value="3">3</option>
+          <option value="2">2</option>
+          <option value="1">1</option>
+          <option value="0">0</option>
         </select>
       </div>
     </div>
