--- a/Ironcrunch/src/html/components/nav/nav-bar.html
+++ b/Ironcrunch/src/html/components/nav/nav-bar.html
@@ -1,12 +1,12 @@
 
 <div class="sheet-ironsworn-nav-bar-pages">
   <div class="sheet-nav-child">
-    <label for="summary">Summary</label>
+    <label for="sheet-summary">Summary</label>
   </div>
   <div class="sheet-nav-child">
-    <label for="vows">Vows</label>
+    <label for="sheet-vows">Vows</label>
   </div>
   <div class="sheet-nav-child">
-    <label for="bonds">Bonds</label>
+    <label for="sheet-bonds">Bonds</label>
   </div>
 </div>
