--- a/Ironcrunch/src/html/components/vows/vows.html
+++ b/Ironcrunch/src/html/components/vows/vows.html
@@ -18,7 +18,7 @@
       </div>
       <div class="sheet-vow">
         <div>
-          <input class="sheet-clear-vow sheet-hidden" type="radio" name="attr_clear_vow" value="0"/>
+          <input class="sheet-clear-vow sheet-hide" type="radio" name="attr_clear_vow" value="0"/>
           <input class="sheet-clear-vow" type="radio" name="attr_clear_vow" value="1"/><span class="sheet-vow-clear-label">Clear</span>
           <select class="sheet-progress-input" name="attr_vow-0">
             <option value="0" selected="selected"></option>
@@ -98,7 +98,7 @@
             <option value="4">#</option>
           </select>
           <button type="roll" title="Fulfill your Vow" name="rollVow" value="&amp;{template:Ironcrunch} {{header=@{character_name} &lt;em&gt;Fulfill Your Vow&lt;/em&gt; }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}">              </button>
-          <input class="sheet-hidden" type="text" name="attr_vow-filled" value="floor((@{vow-0}+@{vow-1}+@{vow-2}+@{vow-3}+@{vow-4}+@{vow-5}+@{vow-6}+@{vow-7}+@{vow-8}+@{vow-9})/4)" disabled="disabled"/>
+          <input class="sheet-hide" type="text" name="attr_vow-filled" value="floor((@{vow-0}+@{vow-1}+@{vow-2}+@{vow-3}+@{vow-4}+@{vow-5}+@{vow-6}+@{vow-7}+@{vow-8}+@{vow-9})/4)" disabled="disabled"/>
         </div>
         <div class="sheet-threat-row">
           <input class="sheet-threat-name sheet-vow-name" type="text" name="attr_threat_name"/><span class="sheet-vow-threat-label">Threat</span>
