--- a/Ironcrunch/src/src/Ironcrunch.styl
+++ b/Ironcrunch/src/src/Ironcrunch.styl
@@ -306,33 +306,8 @@ span.sheet-page-label-6
   justify-content: center
   align-items: center
 
-input[type=checkbox].sheet-momentum-burn
-  width: 76px
-  height: 20px
-  opacity: 0
-  border: 0
-  vertical-align: top
-
-div.sheet-momentum-burn-back
-  margin-top: -20px
-  height: 20px
-
-div.sheet-momentum-burn
-  margin-bottom: 0.2em
-  border: 2px solid #4C4D4F
-  width: 80px
-
-span.sheet-momentum-burn
-  text-align: center
-  padding: 0.2em 1.3em 0.2em 1.3em
-  font-family: arial, sans-serif
-  font-weight: bold
-  font-size: 14px
-  margin-left: -74px
-  text-align: center
-
-input[type=checkbox].sheet-momentum-burn:hover ~ div.sheet-momentum-burn-back
-  background-color: #ccc
+// Momentum
+@import "./components/character-details/momentum"
 
 .sheet-bonds
   margin-bottom: 0px
@@ -374,18 +349,6 @@ input[type=checkbox].sheet-momentum-burn:hover ~ div.sheet-momentum-burn-back
   display: flex
   flex-direction: column
   margin-bottom: 10px
-
-.sheet-momentum-box
-  width: 80px
-  height: 45px
-  display: flex
-  flex-direction: column
-  justify-content: center
-  align-items: center
-  border-radius: 0%
-  background: transparent
-  border: 2px solid #4C4D4F
-  margin-bottom: 2px
 
 .sheet-track-box-input
   width: 80px
@@ -435,18 +398,6 @@ input[type=checkbox].sheet-momentum-burn:hover ~ div.sheet-momentum-burn-back
   padding-top: 10px
   font-size: 18px
   color: inherit
-
-.sheet-momentum-input-box
-  width: 80px
-  height: 60px
-  display: flex
-  flex-direction: column
-  justify-content: center
-  align-items: center
-  border-radius: 0%
-  background: transparent
-  border: 2px solid #4C4D4F
-  margin-bottom: 2px
 
 .sheet-resources-title-box
   width: 80px
@@ -571,14 +522,6 @@ input.sheet-filler[type="radio"] + span::before
 input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + span::before
   content: ""
 
-.sheet-momentum-input
-  font-family: arial, sans-serif
-  font-weight: bold
-  width: 40px
-  font-size: 13px
-  text-align: center
-  background: transparent
-
 .sheet-stats-title
   width: 100px
 
@@ -634,7 +577,7 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
   color: #4C4D4F
   display: flex
 
-.sheet-hidden
+.sheet-hide
   display: none
   position: absolute
 
