--- a/Ironcrunch/src/src/components/character-details/resources.pug
+++ b/Ironcrunch/src/src/components/character-details/resources.pug
@@ -1,22 +1,39 @@
-- var trackValues = { 5: '+5', 4: '+4', 3: '+4', 2: '+2', 1: '+1', 0: '0' }
+include ./tracks/resources.pug
 div.sheet-resources
   div
     h2 Health
     img
-    select(name='attr_health')
-      each val, index in trackValues
-        option(value=index)=val
+    select(name='attr_health_ten')
+      each val in trackValuesHealth
+        option(value=val)=val
+    select(name='attr_health_one')
+      each val in trackValuesNine
+        option(value=val)=val
 
   div
     h2 Spirit
     img
     select(name='attr_spirit')
-      each val, index in trackValues
-        option(value=index)=val
+      each val in trackValuesTen
+        option(value=val)=`+${val}`
 
   div
     h2 Supply
     img
     select(name='attr_supply')
-      each val, index in trackValues
-        option(value=index)=val
+      each val  in trackValuesTen
+        option(value=val)=`+${val}`
+  
+  div
+    h2 Wealth
+    img
+    select(name='attr_wealth')
+      each val  in trackValuesTen
+        option(value=val)=`+${val}`
+
+  div
+    h2 Load
+    img
+    select(name='attr_load')
+      each val in trackValuesTwelve
+        option(value=val)=val
