--- a/Ironcrunch/src/src/components/misses/track.pug
+++ b/Ironcrunch/src/src/components/misses/track.pug
@@ -8,7 +8,7 @@ div.sheet-misses-track
         +progressBox
     input(
       type="text"
-      class="sheet-hidden"
+      class="sheet-hide"
       name="attr_misses-filled"
       value="floor((@{misses-0}+@{misses-1}+@{misses-2}+@{misses-3}+@{misses-4}+@{misses-5}+@{misses-6}+@{misses-7}+@{misses-8}+@{misses-9})/4)"
       disabled="true"
