--- a/Ironcrunch/src/src/components/nav/nav-bar.pug
+++ b/Ironcrunch/src/src/components/nav/nav-bar.pug
@@ -1,4 +1,9 @@
-- var navOptions = { 'summary':'Summary', 'vows':'Vows', 'bonds':'Bonds' }
+- 
+  var navOptions = {
+    'sheet-summary': 'Summary',
+    'sheet-vows': 'Vows',
+    'sheet-bonds': 'Bonds'
+    }
 
 div.sheet-ironsworn-nav-bar-pages
   each text, id in navOptions 
