--- a/Ironcrunch/src/src/components/vows/vows.pug
+++ b/Ironcrunch/src/src/components/vows/vows.pug
@@ -20,7 +20,7 @@ div.sheet-vows-Ironcrunch-mode-page
 
       div.sheet-vow
         div
-          input(class="sheet-clear-vow sheet-hidden" type="radio" name="attr_clear_vow" value="0")
+          input(class="sheet-clear-vow sheet-hide" type="radio" name="attr_clear_vow" value="0")
           input(class="sheet-clear-vow" type="radio" name="attr_clear_vow" value="1")
           span.sheet-vow-clear-label Clear
           each index in track
@@ -34,7 +34,7 @@ div.sheet-vows-Ironcrunch-mode-page
           )               
           input(
             type="text"
-            class="sheet-hidden"
+            class="sheet-hide"
             name="attr_vow-filled"
             value="floor((@{vow-0}+@{vow-1}+@{vow-2}+@{vow-3}+@{vow-4}+@{vow-5}+@{vow-6}+@{vow-7}+@{vow-8}+@{vow-9})/4)"
             disabled
