--- a/Ironcrunch/src/html/components/misses/track.html
+++ b/Ironcrunch/src/html/components/misses/track.html
@@ -78,6 +78,6 @@
       <option value="3">*</option>
       <option value="4">#</option>
     </select>
-    <input class="sheet-hidden" type="text" name="attr_misses-filled" value="floor((@{misses-0}+@{misses-1}+@{misses-2}+@{misses-3}+@{misses-4}+@{misses-5}+@{misses-6}+@{misses-7}+@{misses-8}+@{misses-9})/4)" disabled="true"/>
+    <input class="sheet-hide" type="text" name="attr_misses-filled" value="floor((@{misses-0}+@{misses-1}+@{misses-2}+@{misses-3}+@{misses-4}+@{misses-5}+@{misses-6}+@{misses-7}+@{misses-8}+@{misses-9})/4)" disabled="true"/>
   </div>
 </div>
