--- a/Ironcrunch/src/src/components/bonds/track.pug
+++ b/Ironcrunch/src/src/components/bonds/track.pug
@@ -8,7 +8,7 @@ div.sheet-bonds-track
         +progressBox
     input(
       type="text"
-      class="sheet-hidden"
+      class="sheet-hide"
       name="attr_bond-filled"
       value="floor((@{bond-0}+@{bond-1}+@{bond-2}+@{bond-3}+@{bond-4}+@{bond-5}+@{bond-6}+@{bond-7}+@{bond-8}+@{bond-9})/4)"
       disabled="true"
