--- a/Ironcrunch/src/src/components/character-details/momentum.pug
+++ b/Ironcrunch/src/src/components/character-details/momentum.pug
@@ -1,25 +1,34 @@
-- var momentumTrack = { '20': '+20', '19': '+19', '18': '+18', '17': '+17', '16': '+16', '15': '+15', '14':'+14', '13':'+13', '12':'+12', '11':'+11', '10':'+10', '9':'+9', '8':'+8', '7':'+7', '6':'+6', '5':'+5', '4':'+4', '3':'+3', '2':'+2', '1':'+1', '0':'0', '-1':'-1', '-2':'-2', '-3':'-3', '-4':'-4', '-5':'-5', '-6':'-6', '-7':'-7', '-8':'-8', '-9':'-9', '-10':'-10', '-11':'-11', '-12':'-12' }
+include ./tracks/momentum.pug
+div.sheet-momentum
+    each object in momentumPositiveTrack 
+      div.sheet-momentum-box
+        input(type='radio' name='attr_momentum' class='sheet-momentum-box-input' value=object.value)
+        div.sheet-momentum-box-back
+          h3.sheet-momentum-box-value=object.text
 
 div.sheet-momentum
-    div.sheet-momentum-burn
-      input(type='checkbox' class='sheet-momentum-burn' title='Burn Momentum' name='attr_momentumBurn')
-      span.sheet-momentum-burn Burn
-      div.sheet-momentum-burn-back
-    
-    each text, val in momentumTrack 
-      div.sheet-momentum-box
-        input(type='radio' name='attr_momentum' class='sheet-track-box-input' value=val)
-        div.sheet-track-box-back
-          h3.sheet-track-box-value=text
+  div.sheet-momentum-burn
+    input(type='checkbox' class='sheet-momentum-burn' title='Burn Momentum' name='attr_momentumBurn')
+    span.sheet-momentum-burn Burn
+    div.sheet-momentum-burn-back
 
-    div.sheet-momentum-input-box
-      h3 MAX
-        h3
-          span(name='attr_momentum_max')
-        input(type='text' class='sheet-hidden' name='attr_momentum_max' value='10')
+  div.sheet-momentum-status-box
+    h3.sheet-momentum-max MAX
+    h3
+      span(name='attr_momentum_max')
+    input(type='text' class='sheet-hide' name='attr_momentum_max' value='20')
 
-    div.sheet-momentum-input-box
-      h3 RESET
-      h3
-        span(name='attr_momentum_reset')
-      input(type='text' class='sheet-hidden' name='attr_momentum_reset' value='2')
+  div.sheet-momentum-status-box
+    h3.sheet-momentum-reset RESET
+    h3
+      span(name='attr_momentum_reset')
+    input(type='text' class='sheet-hide' name='attr_momentum_reset' value='2')
+  
+  each object in momentumNegativeTrack 
+    div.sheet-momentum-box
+      input(type='radio' name='attr_momentum' class='sheet-momentum-box-input' value=object.value)
+      div.sheet-momentum-box-back
+        h3.sheet-momentum-box-value=object.text
+
+div.sheet-momentum.sheet-momentum-dark
+  h3.sheet-momentum-title Momentum
