added momentum changes

--- a/Ironcrunch/Ironcrunch.css
+++ b/Ironcrunch/Ironcrunch.css
@@ -728,7 +728,7 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     display: flex;
 }
 
-.sheet-hidden {
+.sheet-hide {
     display: none;
     position: absolute;
 }
