separated out components

--- a/Ironcrunch/src/src/components/header/header.pug
+++ b/Ironcrunch/src/src/components/header/header.pug
@@ -10,4 +10,4 @@ div.sheet-character-details-bar
     div.sheet-character-name
       input(type='text' class='sheet-pc-name' name='attr_character_name' placeholder='Character Name')
     
-    include ./resources.pug 
+    include ../resources/resources.pug 
