--- a/Ironcrunch/src/src/pages/main.pug
+++ b/Ironcrunch/src/src/pages/main.pug
@@ -1,5 +1,5 @@
 //- Header
-include ../components/character-details/details.pug
+include ../components/header/header.pug
 
 //- Nav Bar
 include ../components/nav/nav-bar.pug
@@ -8,7 +8,7 @@ include ../components/nav/nav-bar.pug
 //- Summary 
 input(type="radio" name="attr_ironcrunch-page" id="sheet-summary" class="sheet-hide sheet-ironcrunch-summary" value="1" checked)
 div.sheet-ironcrunch-summary.sheet-hide
-  include ../components/character-details/stats.pug
+  include ../components/stats/stats.pug
 //- Bonds
 input(type="radio" name="attr_ironcrunch-page" id="sheet-bonds" class="sheet-hide sheet-ironcrunch-bonds" value="2")
 div.sheet-ironcrunch-bonds.sheet-hide
@@ -19,4 +19,4 @@ div.sheet-ironcrunch-vows.sheet-hide
   include ../components/vows/vows.pug
 
 //- Footer
-include ../components/character-details/momentum.pug
+include ../components/momentum/momentum.pug
