--- a/Ironcrunch/src/src/components/momentum/momentum.pug
+++ b/Ironcrunch/src/src/components/momentum/momentum.pug
@@ -1,4 +1,4 @@
-include ./tracks/momentum.pug
+include ./tracks.pug
 div.sheet-momentum
     each object in momentumPositiveTrack 
       div.sheet-momentum-box
