updated naming to lowercase

--- a/Ironcrunch/src/html/components/nav/nav-bar.html
+++ b/Ironcrunch/src/html/components/nav/nav-bar.html
@@ -1,5 +1,5 @@
 
-<div class="sheet-ironsworn-nav-bar-pages">
+<div class="sheet-nav-bar">
   <div class="sheet-nav-child">
     <label for="sheet-summary">Summary</label>
   </div>
