--- a/Ironcrunch/src/html/components/vows/vows.html
+++ b/Ironcrunch/src/html/components/vows/vows.html
@@ -1,6 +1,6 @@
 
-<input class="sheet-hide sheet-vows-Ironcrunch-mode-page" type="checkbox" name="attr_vows_ironsworn_mode_page" id="vows-Ironcrunch-mode-page"/>
-<div class="sheet-vows-Ironcrunch-mode-page">
+<input class="sheet-hide sheet-vows-ironcrunch-mode-page" type="checkbox" name="attr_vows_ironsworn_mode_page" id="vows-ironcrunch-mode-page"/>
+<div class="sheet-vows-ironcrunch-mode-page">
   <div class="sheet-vows">
     <fieldset class="repeating_vow">
       <input class="sheet-vow-name" type="text" name="attr_vow_name"/>
@@ -97,7 +97,7 @@
             <option value="3">*</option>
             <option value="4">#</option>
           </select>
-          <button type="roll" title="Fulfill your Vow" name="rollVow" value="&amp;{template:Ironcrunch} {{header=@{character_name} &lt;em&gt;Fulfill Your Vow&lt;/em&gt; }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}">              </button>
+          <button type="roll" title="Fulfill your Vow" name="rollVow" value="&amp;{template:ironcrunch} {{header=@{character_name} &lt;em&gt;Fulfill Your Vow&lt;/em&gt; }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}">              </button>
           <input class="sheet-hide" type="text" name="attr_vow-filled" value="floor((@{vow-0}+@{vow-1}+@{vow-2}+@{vow-3}+@{vow-4}+@{vow-5}+@{vow-6}+@{vow-7}+@{vow-8}+@{vow-9})/4)" disabled="disabled"/>
         </div>
         <div class="sheet-threat-row">
