--- a/Ironcrunch/src/src/Ironcrunch.styl
+++ b/Ironcrunch/src/src/Ironcrunch.styl
@@ -137,51 +137,11 @@ hr
   background: #ccc
   background-image: linear-gradient(to right, #ccc, #333, #ccc)
 
-hr.sheet-nav-top
-  margin-top: 0.5em
-  margin-bottom: 0.2em
-  height: 2px
+@import './components/nav/nav-bar'
 
-hr.sheet-nav-bottom
-  margin-top: 0.2em
-  margin-bottom: 0.5em
-  height: 2px
-
-div.sheet-Ironcrunch-modes,
-div.sheet-delve-modes
-  display none
-
-input[type=radio].sheet-Ironcrunch-modes:checked ~ div.sheet-Ironcrunch-modes,
-input[type=radio].sheet-delve-modes:checked ~ div.sheet-delve-modes
-  display block
-
-input[type=radio].sheet-Ironcrunch-assets:checked ~ div.sheet-Ironcrunch-assets,
-input[type=radio].sheet-Ironcrunch-bonds:checked ~ div.sheet-Ironcrunch-bonds,
-input[type=radio].sheet-Ironcrunch-moves:checked ~ div.sheet-Ironcrunch-moves,
-input[type=radio].sheet-Ironcrunch-oracles:checked ~ div.sheet-Ironcrunch-oracles,
-input[type=radio].sheet-Ironcrunch-progress:checked ~ div.sheet-Ironcrunch-progress,
-input[type=radio].sheet-Ironcrunch-summary:checked ~ div.sheet-Ironcrunch-summary,
-input[type=radio].sheet-Ironcrunch-vows:checked ~ div.sheet-Ironcrunch-vows
-  display: block
-
-input[type=radio].sheet-delve-summary:checked ~ div.sheet-delve-summary,
-input[type=radio].sheet-delve-assets:checked ~ div.sheet-delve-assets,
-input[type=radio].sheet-delve-bonds:checked ~ div.sheet-delve-bonds,
-input[type=radio].sheet-delve-moves:checked ~ div.sheet-delve-moves,
-input[type=radio].sheet-delve-oracles:checked ~ div.sheet-delve-oracles,
-input[type=radio].sheet-delve-progress:checked ~ div.sheet-delve-progress,
-input[type=radio].sheet-delve-sites:checked ~ div.sheet-delve-sites,
-input[type=radio].sheet-delve-vows:checked ~ div.sheet-delve-vows
-  display: block
-
-input.sheet-pages + .sheet-page-label,
 input.sheet-clear-vow + .sheet-vow-clear-label
   border-radius: 4px
   padding: 2px 4px
-
-input.sheet-pages
-  opacity: 0
-  cursor: pointer
 
 input.sheet-clear-vow
   opacity: 0
@@ -194,11 +154,6 @@ input.sheet-clear-vow
   margin-left: -80px
   width: 80px
 
-.sheet-pages:checked + span.sheet-page-label
-  background-color: #4C4D4F
-  color: white
-
-.sheet-pages:hover + .sheet-page-label,
 .sheet-clear-vow:hover + .sheet-vow-clear-label
   border-radius: 4px
   padding: 2px 4px
@@ -307,7 +262,7 @@ span.sheet-page-label-6
   align-items: center
 
 // Momentum
-@import "./components/momentum/momentum"
+@import './components/momentum/momentum'
 
 .sheet-bonds
   margin-bottom: 0px
@@ -579,7 +534,6 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 
 .sheet-hide
   display: none
-  position: absolute
 
 div.sheet-showhide
   display: none
@@ -1557,12 +1511,12 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
   display: block
 
 /* ROLL TEMPLATE */
-.sheet-rolltemplate-Ironcrunch table>thead>tr>th,
-.sheet-rolltemplate-Ironcrunch table>tbody>tr>th,
-.sheet-rolltemplate-Ironcrunch table>tfoot>tr>th,
-.sheet-rolltemplate-Ironcrunch table>thead>tr>td,
-.sheet-rolltemplate-Ironcrunch table>tbody>tr>td,
-.sheet-rolltemplate-Ironcrunch table>tfoot>tr>td,
+.sheet-rolltemplate-ironcrunch table>thead>tr>th,
+.sheet-rolltemplate-ironcrunch table>tbody>tr>th,
+.sheet-rolltemplate-ironcrunch table>tfoot>tr>th,
+.sheet-rolltemplate-ironcrunch table>thead>tr>td,
+.sheet-rolltemplate-ironcrunch table>tbody>tr>td,
+.sheet-rolltemplate-ironcrunch table>tfoot>tr>td,
 .sheet-rolltemplate-ironsworn_oracles table>thead>tr>th,
 .sheet-rolltemplate-ironsworn_oracles table>tbody>tr>th,
 .sheet-rolltemplate-ironsworn_oracles table>tfoot>tr>th,
@@ -1584,7 +1538,7 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
   padding: 4px
   border: none
 
-.sheet-rolltemplate-Ironcrunch table,
+.sheet-rolltemplate-ironcrunch table,
 .sheet-rolltemplate-ironsworn_oracles table,
 .sheet-rolltemplate-ironsworn_delve table,
 .sheet-rolltemplate-ironsworn_delve_oracles table
@@ -1595,7 +1549,7 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
   font-family: Verdana, Arial, sans-serif
   margin: 0px
 
-.sheet-rolltemplate-Ironcrunch th,
+.sheet-rolltemplate-ironcrunch th,
 .sheet-rolltemplate-ironsworn_oracles th,
 .sheet-rolltemplate-ironsworn_delve th,
 .sheet-rolltemplate-ironsworn_delve_oracles th
@@ -1607,7 +1561,7 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
   font-size: 1.2em
   text-align: center
 
-.sheet-rolltemplate-Ironcrunch .sheet-subheader,
+.sheet-rolltemplate-ironcrunch .sheet-subheader,
 .sheet-rolltemplate-ironsworn_oracles .sheet-subheader,
 .sheet-rolltemplate-ironsworn_delve .sheet-subheader,
 .sheet-rolltemplate-ironsworn_delve_oracles .sheet-subheader
@@ -1622,7 +1576,7 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
   text-align: left
   padding: 0.5rem
 
-.sheet-rolltemplate-Ironcrunch .sheet-subfooter,
+.sheet-rolltemplate-ironcrunch .sheet-subfooter,
 .sheet-rolltemplate-ironsworn_oracles .sheet-subfooter,
 .sheet-rolltemplate-ironsworn_delve .sheet-subfooter,
 .sheet-rolltemplate-ironsworn_delve_oracles .sheet-subfooter
@@ -1641,45 +1595,45 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
   background-color: #6a286a
   border-bottom: 2px solid #000000
 
-.sheet-rolltemplate-Ironcrunch .sheet-alert,
+.sheet-rolltemplate-ironcrunch .sheet-alert,
 .sheet-rolltemplate-ironsworn_delve .sheet-alert
   color: white
   background-color: #761818
 
-.sheet-rolltemplate-Ironcrunch .sheet-opportunity,
+.sheet-rolltemplate-ironcrunch .sheet-opportunity,
 .sheet-rolltemplate-ironsworn_oracles .sheet-opportunity,
 .sheet-rolltemplate-ironsworn_delve .sheet-opportunity,
 .sheet-rolltemplate-ironsworn_delve_oracles .sheet-opportunity
   color: white
   background-color: #0B3F0B
 
-.sheet-rolltemplate-Ironcrunch .sheet-strong-hit,
+.sheet-rolltemplate-ironcrunch .sheet-strong-hit,
 .sheet-rolltemplate-ironsworn_delve .sheet-strong-hit
   color: white
   background-color: #125812
 
-.sheet-rolltemplate-Ironcrunch .sheet-weak-hit,
+.sheet-rolltemplate-ironcrunch .sheet-weak-hit,
 .sheet-rolltemplate-ironsworn_delve .sheet-weak-hit
   color: white
   background-color: #186251
 
-.sheet-rolltemplate-Ironcrunch .sheet-miss,
+.sheet-rolltemplate-ironcrunch .sheet-miss,
 .sheet-rolltemplate-ironsworn_delve .sheet-miss
   color: white
   background-color: #7D2B1D
 
-.sheet-rolltemplate-Ironcrunch .sheet-complication,
+.sheet-rolltemplate-ironcrunch .sheet-complication,
 .sheet-rolltemplate-ironsworn_delve .sheet-complication
   color: white
   background-color: #761818
 
-.sheet-rolltemplate-Ironcrunch .userscript-tcat,
+.sheet-rolltemplate-ironcrunch .userscript-tcat,
 .sheet-rolltemplate-ironsworn_oracles .userscript-tcat,
 .sheet-rolltemplate-ironsworn_delve .userscript-tcat,
 .sheet-rolltemplate-ironsworn_delve_oracles .userscript-tcat
   font-weight: bold
 
-.sheet-rolltemplate-Ironcrunch td,
+.sheet-rolltemplate-ironcrunch td,
 .sheet-rolltemplate-ironsworn_oracles td,
 .sheet-rolltemplate-ironsworn_delve td,
 .sheet-rolltemplate-ironsworn_delve_oracles td
@@ -1712,19 +1666,19 @@ input[type="radio"].sheet-threat-zealous-cult:checked ~ div.sheet-threat-zealous
 .sheet-rolltemplate-ironsworn_delve_oracles .sheet-oracle-double-dice span
   border: 0px !important
 
-.sheet-rolltemplate-Ironcrunch tr:nth-child(odd),
+.sheet-rolltemplate-ironcrunch tr:nth-child(odd),
 .sheet-rolltemplate-ironsworn_oracles tr:nth-child(odd),
 .sheet-rolltemplate-ironsworn_delve tr:nth-child(odd),
 .sheet-rolltemplate-ironsworn_delve_oracles tr:nth-child(odd)
   background-color: #d9d9d6
 
-.sheet-rolltemplate-Ironcrunch tr:nth-child(even),
+.sheet-rolltemplate-ironcrunch tr:nth-child(even),
 .sheet-rolltemplate-ironsworn_oracles tr:nth-child(even),
 .sheet-rolltemplate-ironsworn_delve tr:nth-child(even),
 .sheet-rolltemplate-ironsworn_delve_oracles tr:nth-child(even)
   background-color: #e9e9e6
 
-.sheet-rolltemplate-Ironcrunch .inlinerollresult,
+.sheet-rolltemplate-ironcrunch .inlinerollresult,
 .sheet-rolltemplate-ironsworn_oracles .inlinerollresult,
 .sheet-rolltemplate-ironsworn_delve .inlinerollresult,
 .sheet-rolltemplate-ironsworn_delve_oracles .inlinerollresult
