--- a/Ironcrunch/src/src/components/nav/nav-bar.pug
+++ b/Ironcrunch/src/src/components/nav/nav-bar.pug
@@ -1,11 +1,11 @@
 - 
-  var navOptions = {
-    'sheet-summary': 'Summary',
-    'sheet-vows': 'Vows',
-    'sheet-bonds': 'Bonds'
-    }
+  var pages = [
+    { id: 'sheet-summary', text: 'Summary' },
+    { id: 'sheet-vows', text: 'Vows' },
+    { id: 'sheet-bonds', text: 'Bonds' }
+  ]
 
-div.sheet-ironsworn-nav-bar-pages
-  each text, id in navOptions 
+div.sheet-nav-bar
+  each page in pages 
     div.sheet-nav-child
-      label(for=id)=text
+      label(for=page.id)=page.text
