--- a/Ironcrunch/src/src/components/stats/stats.pug
+++ b/Ironcrunch/src/src/components/stats/stats.pug
@@ -7,7 +7,7 @@ div.sheet-stats
         type='roll'
         title=`Roll +${stat.capital}`
         name=`roll${stat.capital}`
-        value=`&{template:Ironcrunch} {{header=@{character_name}}} {{name=Roll +${stat.lower}}} {{action=[[1d6+@{${stat.lower}}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{${stat.lower}}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{${stat.lower}}+(?{Modifier|0}))-(@{momentum})]]}}`
+        value=`&{template:ironcrunch} {{header=@{character_name}}} {{name=Roll +${stat.lower}}} {{action=[[1d6+@{${stat.lower}}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{${stat.lower}}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{${stat.lower}}+(?{Modifier|0}))-(@{momentum})]]}}`
       )
       h3.sheet-stats-title=stat.upper
       input(
