--- a/Ironcrunch/src/src/components/vows/vows.pug
+++ b/Ironcrunch/src/src/components/vows/vows.pug
@@ -8,8 +8,8 @@ mixin progressBox
   option(value="3") *
   option(value="4") #
 
-input(type="checkbox" class="sheet-hide sheet-vows-Ironcrunch-mode-page" name="attr_vows_ironsworn_mode_page" id="vows-Ironcrunch-mode-page")
-div.sheet-vows-Ironcrunch-mode-page
+input(type="checkbox" class="sheet-hide sheet-vows-ironcrunch-mode-page" name="attr_vows_ironsworn_mode_page" id="vows-ironcrunch-mode-page")
+div.sheet-vows-ironcrunch-mode-page
   div.sheet-vows
     fieldset.repeating_vow
       input(type="text" class="sheet-vow-name" name="attr_vow_name")
@@ -30,7 +30,7 @@ div.sheet-vows-Ironcrunch-mode-page
             type="roll"
             title="Fulfill your Vow"
             name="rollVow"
-            value="&{template:Ironcrunch} {{header=@{character_name} <em>Fulfill Your Vow</em> }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}"
+            value="&{template:ironcrunch} {{header=@{character_name} <em>Fulfill Your Vow</em> }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}"
           )               
           input(
             type="text"
