- Sorted styles to be in order based on their length
- Added extra parenthesis for hit and damage calculations
- Fixed a few spelling errors

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -22,33 +22,17 @@
     display: inline-block;
     width: 72px;
 }
-.charsheet input.sheet-attr {
+.charsheet input.sheet-mintext {
     display: inline-block;
-    width: 80px;
-}
-.charsheet input.sheet-short {
-   display: inline-block;
-   width: 3.5em;
-}
-.charsheet input.sheet-shortish {
-    display: inline-block;
-    width: 4.1em;
-}
-.charsheet input.sheet-min {
-    display: inline-block;
-    width: 2.7em;
+    width: 74px;
 }
 .charsheet input.sheet-madtext {
     display: inline-block;
     width: 79px;
 }
-.charsheet input.sheet-fill {
+.charsheet input.sheet-attr {
     display: inline-block;
-    width: 106px;
-}
-.charsheet input.sheet-mintext {
-    display: inline-block;
-    width: 74px;
+    width: 80px;
 }
 .charsheet input.sheet-midtext {
     display: inline-block;
@@ -58,13 +42,21 @@
     display: inline-block;
     width: 100px;
 }
+.charsheet input.sheet-fill {
+    display: inline-block;
+    width: 106px;
+}
+.charsheet input.sheet-medium {
+    display: inline-block;
+    width: 115px;
+}
+.charsheet input.sheet-rogue {
+    display: inline-block;
+    width: 120px;
+}
 .charsheet input.sheet-middle {
     display: inline-block;
     width: 138px;
-}
-.charsheet input.sheet-medium {
-   display: inline-block;
-   width: 115px;
 }
 .charsheet input.sheet-display {
     display: inline-block;
@@ -78,10 +70,6 @@
     display: inline-block;
     width: 200px;
 }
-.charsheet input.sheet-rogue {
-    display: inline-block;
-    width: 120px;
-}
 .charsheet input.sheet-spell {
     display: inline-block;
     width: 215px;
@@ -89,6 +77,23 @@
 .charsheet input.sheet-long {
     display: inline-block;
     width: 400px;
+}
+.charsheet input.sheet-short {
+   display: inline-block;
+   width: 3.5em;
+}
+.charsheet input.sheet-shortish {
+    display: inline-block;
+    width: 4.1em;
+}
+.charsheet input.sheet-min {
+    display: inline-block;
+    width: 2.7em;
+}
+.charsheet input.sheet-table-dynamic {
+    width: 0;
+    min-width: 100%;
+    box-sizing: border-box;
 }
 .charsheet input[type="number"].sheet-tiny {
     display: inline-block;
@@ -100,10 +105,7 @@
     input[type="number"].sheet-nobut::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
-.charsheet input.sheet-tiny {
-    display: inline-block;
-    width: 20px;
-}
+
 .charsheet select.sheet-small {
     display: inline-block;
     width: 29px;
