Changed all equal stylings with the same value, to all use the same class

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -1138,12 +1138,11 @@ button:hover {
     margin: 0;
 }
 
-th.sheet-default-header {
+.sheet-default-header {
     background-color: #7C0303;
     color: #FFF;
     font-family: Arial, sans-serif;
     font-weight: bold;
-    vertical-align: middle;
 }
 
 .sheet-centering,
